# dotfiles

./: Brewfile  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  bootstrap.sh  check.sh  configuration.nix  flake.nix  home.nix  homebrew.nix  nixos.nix  rebuild.sh  tasks.md
.agents/: AGENTS.md
.agents/commands/: task.md
.agents/rules/: global-systems-engineering.md  herdr-parallel-work.md
.agents/skills/agent-facing-cli-design/: SKILL.md
.agents/skills/architecture-decision-records/: SKILL.md
codex/: codex-cheatsheet.md
docs/: dev-tools.md  macos-install-handoff.md  macos.md  rhel8.md  wsl.md
herdr/: config.toml
home/: AGENTS.md
home/.config/nvim/: init.lua  (+3 more)
homebrew/: Brewfile
nvim/: init.lua  lazy-lock.json  nvim-cheatsheet.md
scripts/: ai.sh  check.sh  copy_template.sh  dev.sh  install.sh  link.sh  macos.sh  nvim.sh  rhel8.sh  test.sh  unlink.sh  vscode.sh  windows.ps1  wsl.sh
starship/: starship-cheatsheet.md  starship.toml
templates/cpp/: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json
templates/cpp/src/: main.cpp
templates/python/: .gitignore  README.md  pyproject.toml
templates/python/src/python_template/: __init__.py  core.py
templates/python/tests/: test_core.py
tests/fixtures/: linux-proc-version  rhel8-os-release  unknown-os-release  wsl-proc-version
tmux/: tmux-cheatsheet.md  tmux.conf
vscode/macos/: keybindings.json  settings.json
wezterm/: wezterm-cheatsheet.md  wezterm.lua
yazi/: keymap.toml  yazi-cheatsheet.md
zsh/: .zshenv  .zshrc  aliases.zsh  custom.zsh  zsh-cheatsheet.md
(+58 files in other folders)
